[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toupcam"
version = "1.0.0"
description = "Toupcam SDK for Linux - contains library/driver and Python SDK"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Toupcam SDK"}
]
requires-python = ">=3.7"
dependencies = []

[project.urls]
Homepage = "https://github.com/toupcam/toupcam-sdk"
Repository = "https://github.com/toupcam/toupcam-sdk"
